--- a/Training and Detection.ipynb
+++ b/Training and Detection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {
     "id": "146BB11JpfDA"
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "metadata": {
     "id": "42hJEdo_pfDB"
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {
     "id": "hbPhYVy_pfDB"
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {
     "id": "LwhWZMI0pfDC"
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {
     "id": "HR-TfDGrpfDC"
    },
@@ -110,17 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Activate conda environnement\n",
-    "%conda activate anpr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {
     "id": "K-Cmz2edpfDE",
     "scrolled": false
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 6,
    "metadata": {
     "id": "iA1DIq5OpfDE"
    },
@@ -239,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -248,7 +238,26 @@
     "outputId": "ff5471b2-bed2-43f2-959c-327a706527b6",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 fichier(s) dÃ©placÃ©(s).\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/checkpoint\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.index\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/saved_model.pb\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.index\n"
+     ]
+    }
+   ],
    "source": [
     "if os.name =='posix':\n",
     "    !wget {PRETRAINED_MODEL_URL}\n",
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {
     "id": "p1BVDWo7pfDC"
    },
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -348,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "metadata": {
     "id": "cOjuTFbwpfDF"
    },
@@ -379,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {
     "id": "Z9hRrO_ppfDF"
    },
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "metadata": {
     "id": "c2A0mn4ipfDF"
    },
@@ -404,20 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "uQA13-afpfDF",
-    "outputId": "907496a4-a39d-4b13-8c2c-e5978ecb1f10"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 16,
    "metadata": {
     "id": "9vK5lotDpfDF"
    },
@@ -431,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 17,
    "metadata": {
     "id": "rP43Ph0JpfDG"
    },
@@ -449,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 18,
    "metadata": {
     "id": "oJvfgwWqpfDG"
    },
@@ -587,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "metadata": {
     "id": "8TYk4_oIpfDI"
    },
@@ -603,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "metadata": {
     "id": "tDnQg-cYpfDI"
    },
@@ -636,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 21,
    "metadata": {
     "id": "Y_MKiuZ4pfDI"
    },
