--- a/Training and Detection.ipynb
+++ b/Training and Detection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "146BB11JpfDA"
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "42hJEdo_pfDB"
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "hbPhYVy_pfDB"
    },
@@ -46,9 +46,11 @@
     "paths = {\n",
     "    'WORKSPACE_PATH': os.path.join('Tensorflow', 'workspace'),\n",
     "    'SCRIPTS_PATH': os.path.join('Tensorflow','scripts'),\n",
+    "\n",
+    "#   TO BE CHANGED ACCORDING TO YOUR LOCAL SETTINGS, IF TF models NOT INSTALLED IN YOUR MACHINE, THEN LEAVE AS:\n",
     "#   'APIMODEL_PATH': os.path.join('Tensorflow','models')\n",
-    "#   Changed API path becasue TF was already installed on my machine\n",
-    "    'APIMODEL_PATH': os.path.join('..\\..\\OD_TF','models'),\n",
+    "    'APIMODEL_PATH': os.path.join('..\\..\\OD_TF','models'), # this is my personal path\n",
+    "    \n",
     "    'ANNOTATION_PATH': os.path.join('Tensorflow', 'workspace','annotations'),\n",
     "    'IMAGE_PATH': os.path.join('Tensorflow', 'workspace','images'),\n",
     "    'MODEL_PATH': os.path.join('Tensorflow', 'workspace','models'),\n",
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "id": "LwhWZMI0pfDC"
    },
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "id": "HR-TfDGrpfDC"
    },
@@ -99,13 +101,6 @@
    },
    "source": [
     "# 1. Download TF Models Pretrained Models from Tensorflow Model Zoo and Install TFOD"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Activate conda environnement"
    ]
   },
   {
@@ -147,6 +142,14 @@
     "if os.name=='nt':\n",
     "    !pip install wget\n",
     "    import wget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### If TF models not installed, download and install\n",
+    "If you have TF models and ObjectDetection API installed on your machine then dont run the below 3 cells"
    ]
   },
   {
@@ -280,11 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "id": "p1BVDWo7pfDC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'files' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21296/865495510.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'licence'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'squared_licence'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'LABELMAP'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mlabel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'item { \\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'files' is not defined"
+     ]
+    }
+   ],
    "source": [
     "labels = [{'name':'licence', 'id':1}, {'name':'squared_licence', 'id':2}]\n",
     "\n",
@@ -388,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "id": "Z9hRrO_ppfDF"
    },
@@ -402,11 +417,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "id": "c2A0mn4ipfDF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'files' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21296/202684143.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mconfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconfig_util\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_configs_from_pipeline_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'PIPELINE_CONFIG'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'files' is not defined"
+     ]
+    }
+   ],
    "source": [
     "config = config_util.get_configs_from_pipeline_file(files['PIPELINE_CONFIG'])"
    ]
@@ -572,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "id": "8TYk4_oIpfDI"
    },
@@ -599,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "id": "tDnQg-cYpfDI"
    },
@@ -632,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "id": "Y_MKiuZ4pfDI"
    },
@@ -657,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 21,
    "metadata": {
     "id": "cBDbIhNapfDI"
    },
@@ -668,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 22,
    "metadata": {
     "id": "Lx3crOhOzITB"
    },
@@ -680,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -743,9 +770,11 @@
    "source": [
     "### 1) KERAS OCR\n",
     "\n",
-    "Having some weird none reproductible error while running EasyOCR, I decided to try a different one. Keras_OCR being easy to implement, I gave it a try. It turned out that the problem was caused by the last version of Open_CV, I thus downgraded to 4.5.3 (see above) and that fixed my problem. \n",
+    "Having some weird none reproductible errors while running EasyOCR, I decided to try a different one. Keras_OCR being easy to implement, I gave it a try. It turned out that the problem was caused by the last version of Open_CV, I thus downgraded to 4.5.3 (see above) and that fixed my problem. \n",
     "\n",
-    "Keras_OCR was finally less acurate than Easy_OCR, I kept it here for reference and ONLY IMPLEMENTED THE FINAL VERSION with EasyOCR."
+    "Keras_OCR was finally less acurate than Easy_OCR, I kept it here for reference and **ONLY IMPLEMENTED THE ANPR SOLUTION with EasyOCR.**\n",
+    "\n",
+    "So you can skip the next few cells till EasyOCR detection, or just run them to get a quick overview of their differences."
    ]
   },
   {
@@ -832,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,17 +879,12 @@
     "image = image_np_with_detections\n",
     "scores = list(filter(lambda x: x> detection_threshold, detections['detection_scores']))\n",
     "boxes = detections['detection_boxes'][:len(scores)]\n",
-    "classes = detections['detection_classes'][:len(scores)]\n",
-    "\n",
-    "# print(detections['detection_scores'])\n",
-    "# print(detections['detection_boxes'])\n",
-    "# print(detections['detection_classes'])\n",
-    "# print(detections['num_detections'])"
+    "classes = detections['detection_classes'][:len(scores)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -882,10 +906,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22503230130>"
+       "<matplotlib.image.AxesImage at 0x1e2cf09cee0>"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
